# DocumentAnalyserAPI

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  compose.yaml  pyproject.toml  tasks.py
alembic/: env.py
alembic/versions/: cff505a9a1bc_initial.py
app/: main.py
app/adapters/api/routes/: records.py  upload.py
app/adapters/excel/: openpyxl_parser.py
app/adapters/persistence/: database.py  models.py  repository.py
app/adapters/validation/: config.py  pipeline.py
app/adapters/validation/validators/: allowed_values.py  base.py  cn_code.py  contact_person.py  country.py  date_format.py  email.py  eori.py  length.py  numeric.py  required.py
app/core/: config.py  exceptions.py  logging.py
app/core/domain/: models.py
app/core/domain/ports/: excel_parser.py  record_repository.py  record_validator.py
app/core/services/: upload_service.py
app/schemas/: pagination.py  record.py  upload.py
docs/: Analisis.org  CBAM_Shared_Data_Intake_Template_v1.0.xlsx - Sheet1.csv  CBAM_Shared_Data_Intake_Template_v1.0.xlsx - Template.csv
tests/: conftest.py
tests/fixtures/: sample_data.xlsx  valid_bulk_data.xlsx
tests/fixtures/docs/: CBAM_Shared_Data_Intake_Template_v1.0.xlsx
tests/integration/: test_api.py  test_bulk_upload.py  test_records_api.py  test_upload_api.py
tests/unit/: test_app.py  test_config.py  test_database.py  test_excel_parser.py  test_exceptions.py  test_models.py  test_orm_model.py  test_ports.py  test_repository.py  test_schemas.py  test_upload_service.py  test_validation_config.py  test_validators.py
