[project]
name = "documentanalyserapi"
version = "0.1.0"
description = "Receive documents to validate"
authors = [
    {name = "aserrador",email = "alejandro.ayala@onecluster.org"}
]
license = {text = "GPL-2.0 license"}
requires-python = ">=3.14,<4.0"
dependencies = [
    "fastapi (>=0.139.0,<0.140.0)",
    "uvicorn[standard] (>=0.51.0,<0.52.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "aiosqlite (>=0.22.1,<0.23.0)",
    "asyncpg (>=0.30.0,<1.0.0)",
    "loguru (>=0.7.3,<1.0.0)",
    "python-multipart (>=0.0.32,<0.0.33)",
    "email-validator (>=2.3.0,<3.0.0)"
]


[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.1.1,<10.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "black (>=26.5.1,<27.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "invoke (>=3.0.3,<4.0.0)",
    "pytest-asyncio (>=1.4.0,<2.0.0)"
]
